...
                  );
                },
              ),
            ],
          ),
          SettingsSection(
            title: Text('アカウント', style: Styles.defaultStyle15),
            tiles: [
              SettingsTile.navigation(
                leading: const Icon(Icons.person_rounded),
                title: Text('ユーザ情報', style: Styles.defaultStyle13),
                onPressed: (context) {
                  context.go('/settings/userInfo');
...
                  onPressed: (context) {
                    context.go('/settings/link_account');
                  },
                ),
                SettingsTile.navigation(
                  leading: const Icon(Icons.delete, color: Colors.red),
                  title: Text('ゲストユーザの削除', style: Styles.defaultStyleRed13),
                  onPressed: (context) {
                    showConfirmDialog(
                      context: context,
                      ref: ref,
                      title: "確認",
                      message1:
...
