...
        builder: (BuildContext context) {
          return CupertinoAlertDialog(
            title: const Text('STEP 1 : 入力エラー\n', style: TextStyle(color: Colors.red)),
            content: const Text('1つ以上の時間区分を入力してください'),
            actions: <Widget>[
              CupertinoDialogAction(
                child: const Text('OK', style: TextStyle(color: Colors.red)),
                onPressed: () {
                  Navigator.pop(context);
                  _selectedIndex = 0; 
                  setState(() {});
                },
              ),
...
