...
                      color: Colors.white,
                    )),
                const SizedBox(height: 10),
                Text('ゲストユーザとしてログイン', style: Styles.defaultStyleWhite20),
                const SizedBox(height: 10),
                signInButton(context, ref, "guest", "assets/person2.png",
                    "ゲストログイン", Colors.tealAccent, Styles.defaultStyleBlack18),
              ],
            ),
          ),
        ),
      ),
    );
...
