...
        ),
        SizedBox(height: screenSize.height * 0.02),
        Row(
          mainAxisAlignment: MainAxisAlignment.spaceBetween,
          children: [
            CustomTextButton(
              text: "入力",
              enable: true,
              width: screenSize.width * 0.9,
              height: 35,
              onPressed: () {
                setState(
                  () {
...
